Issue #SC-2172 feat: upgrade learner to jdk11 (#654)
Upgrading learner to jdk11