@@ -26,6 +26,18 @@
 			<version>${learner.akka.version}</version>
 			<scope>test</scope>
 		</dependency>
+        <!--These below dependency required for testcase to pass with jdk-11 upgrade else throws exception related to
+                java.lang.ClassFormatError: Nest member class_info_index 96 has bad constant type in class file-->
+        <dependency>
+          <groupId>org.javassist</groupId>
+          <artifactId>javassist</artifactId>
+          <version>3.24.1-GA</version>
+        </dependency>
+        <dependency>
+          <groupId>javax.annotation</groupId>
+          <artifactId>javax.annotation-api</artifactId>
+          <version>1.3.2</version>
+        </dependency>
 	</dependencies>
 	<build>
 		<sourceDirectory>${basedir}/src/main/java</sourceDirectory>
@@ -34,17 +46,17 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>2.3.2</version>
-				<configuration>
-					<source>1.8</source>
-					<target>1.8</target>
-				</configuration>
+                <version>3.8.0</version>
+                <configuration>
+                  <release>11</release>
+                </configuration>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
-				<version>2.20</version>
+				<version>3.0.0-M4</version>
 				<configuration>
+                    <argLine>--illegal-access=permit</argLine>
 					<argLine>@{argLine} -Xmx1024m -XX:MaxPermSize=256m</argLine>
 					<includes>
 						<include>**/*Spec.java</include>
